feat: incorporate more scripts

--- a/.gitignore
+++ b/.gitignore
@@ -157,7 +157,8 @@ data
 data/*
 wandb
 wandb/*
-
+outputs
+outputs/*
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
