--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,5 @@ outputs/*
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+fourier_2d*
