--- a/.gitignore
+++ b/.gitignore
@@ -166,4 +166,4 @@ outputs/*
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-fourier_2d*
+debug*
