--- a/configs/base_fno.yaml
+++ b/configs/base_fno.yaml
@@ -4,12 +4,13 @@ exp_name: '4-FNO-base-original-loss'
 path_name: planes_channel180_minchan
 model_name: FNO2dObserver
 learning_rate: 0.001
+weight_decay: 0.0001
 epochs: 500
 step_size: 100
 gamma: 0.5
 modes: 12
 width: 32
-close_wandb: false
+close_wandb: true
 batch_size: 20
 downsample_rate: 1
 x_range: 32
@@ -18,3 +19,5 @@ ntrain: 7500
 ntest: 2501
 use_v_plane: false
 use_patch: false
+timestep: -1
+recurrent_model: false
