--- a/configs/base_rno.yaml
+++ b/configs/base_rno.yaml
@@ -1,15 +1,16 @@
 DATA_FOLDER: './data/planes_channel180_minchan'
 project_name: 'fno_vs_unet'
-exp_name: '4-FNO-base-original-loss'
+exp_name: '5-RNO-base-original-loss-correct-loss-magnitude'
 path_name: planes_channel180_minchan
 model_name: RNO2dObserverOld
 learning_rate: 0.001
+weight_decay: 0.0001
 epochs: 500
 step_size: 100
 gamma: 0.5
 modes: 12
 width: 32
-close_wandb: false
+close_wandb: true
 batch_size: 20
 downsample_rate: 1
 x_range: 32
@@ -18,3 +19,6 @@ ntrain: 7500
 ntest: 2500
 use_v_plane: false
 use_patch: false
+timestep: 2
+recurrent_model: true
+recurrent_index: 0
