--- a/configs/base_rno.yaml
+++ b/configs/base_rno.yaml
@@ -1,6 +1,6 @@
 DATA_FOLDER: './data/planes_channel180_minchan'
 project_name: 'fno_vs_unet'
-exp_name: '20-RNO-layer num 10'
+exp_name: '22-RNO-layer bs 10'
 path_name: planes_channel180_minchan
 model_name: RNO2dObserverOld
 learning_rate: 0.001
@@ -9,18 +9,25 @@ epochs: 500
 step_size: 100
 gamma: 0.5
 modes: 12
-width: 32
-close_wandb: false
-batch_size: 20
+width: 32  # 32 by default
+close_wandb: true
+batch_size: 32  # 20
 downsample_rate: 1
 x_range: 32
 y_range: 32
-ntrain: 7500
-ntest: 2500
+ntrain: 8000
+ntest: 2000
 use_v_plane: false
 use_patch: false
 timestep: 2
 recurrent_model: true
 recurrent_index: 0
 random_split: false
-layer_num: 10  # use 10 as a full model
+
+# # small model
+# width: 32  # 32 by default
+# layer_num: 3
+
+# large model
+width: 64
+layer_num: 10
