--- a/configs/base_rno.yaml
+++ b/configs/base_rno.yaml
@@ -1,16 +1,14 @@
 DATA_FOLDER: './data/planes_channel180_minchan'
 project_name: 'fno_vs_unet'
-exp_name: '22-RNO-layer bs 10'
+exp_name: '27-RNO-double z'
 path_name: planes_channel180_minchan
 model_name: RNO2dObserverOld
 learning_rate: 0.001
 weight_decay: 0.0001
-epochs: 500
 step_size: 100
 gamma: 0.5
 modes: 12
 width: 32  # 32 by default
-close_wandb: true
 batch_size: 32  # 20
 downsample_rate: 1
 x_range: 32
@@ -24,10 +22,16 @@ recurrent_model: true
 recurrent_index: 0
 random_split: false
 
-# # small model
-# width: 32  # 32 by default
-# layer_num: 3
+# small model
+width: 34  # 32 by default
+batch_size: 32
+layer_num: 3
+close_wandb: true
+epochs: 200
 
-# large model
-width: 64
-layer_num: 10
+# # large model
+# batch_size: 32  # 20
+# width: 64
+# layer_num: 10
+# close_wandb: false
+# epochs: 200
