--- a/configs/base_control.yaml
+++ b/configs/base_control.yaml
@@ -1,7 +1,8 @@
-project_name: control_v1
-load_model_name: planes_channel180_minchan_4-FNO-base-original-loss.pth
-# load_model_name: planes_channel180_minchan_3-system-FNO-no-scheduler.pth
+project_name: control_v2
+load_model_name: planes_channel180_minchan_31-FNO-reproduce.pth
+comments: 4-rewrite utau
 display_variables:
+  - comments
   - policy_name
   - reward_type
   - noise_scale
@@ -13,20 +14,20 @@ use_v_plane: false
 modes: 12
 width: 32
 vis_sample_img: false
-close_wandb: true
-timestep: 1000
+timestep: 500
 noise_scale: 0.0
 use_spectral_conv: false
-
 downsample_rate: 1
 x_range: 32
 y_range: 32
 policy_name: fno
 # policy_name: rand
+# policy_name: gt
+rand_scale: 1   # this is for rand policy
 reward_type: mse
 
 # visualization setttings
 vis_frame: 60
 vis_interval: 1000  # default, will be overwritten.
 output_dir: ./outputs
-rand_scale: 1
+close_wandb: false
