--- a/configs/base_rno.yaml
+++ b/configs/base_rno.yaml
@@ -1,6 +1,6 @@
 DATA_FOLDER: './data/planes_channel180_minchan'
 project_name: 'fno_vs_unet'
-exp_name: '27-RNO-double z'
+exp_name: '28-RNO-reproduce'
 path_name: planes_channel180_minchan
 model_name: RNO2dObserverOld
 learning_rate: 0.001
@@ -22,16 +22,16 @@ recurrent_model: true
 recurrent_index: 0
 random_split: false
 
-# small model
-width: 34  # 32 by default
-batch_size: 32
-layer_num: 3
-close_wandb: true
-epochs: 200
-
-# # large model
-# batch_size: 32  # 20
-# width: 64
-# layer_num: 10
-# close_wandb: false
+# # small model
+# width: 34  # 32 by default
+# batch_size: 32
+# layer_num: 3
+# close_wandb: true
 # epochs: 200
+
+# large model
+batch_size: 32  # 20
+width: 64
+layer_num: 10
+close_wandb: false
+epochs: 200
