feat: add restrictions on w

--- a/configs/base_control.yaml
+++ b/configs/base_control.yaml
@@ -1,20 +1,21 @@
 project_name: control_v2
 load_model_name: planes_channel180_minchan_31-FNO-reproduce.pth
-comments: 5-no apply bc
+comments: 8-closer detect plane
 display_variables:
   - comments
   - policy_name
-  - reward_type
   - noise_scale
   - timestep
 DATA_FOLDER: ./data/planes_channel180_minchan
 path_name: planes_channel180_minchan
 model_name: FNO2dObserver
+# state_path_name: ./data/channel180_minchan.mat  # original
+state_path_name: ./outputs/flow_900.npy
 use_v_plane: false
 modes: 12
 width: 32
 vis_sample_img: false
-timestep: 1000
+timestep: 60
 noise_scale: 0.0
 use_spectral_conv: false
 downsample_rate: 1
@@ -22,12 +23,18 @@ x_range: 32
 y_range: 32
 # policy_name: fno
 # policy_name: rand
+# policy_name: unmanipulated
 policy_name: gt
 rand_scale: 1   # this is for rand policy
 reward_type: mse
+
+# environmental settings:
+detect_plane: -10  # get velocity from detect plane
+test_plane: -25
+w_weight: 0.8
 
 # visualization setttings
 vis_frame: 60
 vis_interval: 1000  # default, will be overwritten.
 output_dir: ./outputs
-close_wandb: false
+close_wandb: true
