--- a/configs/base_control.yaml
+++ b/configs/base_control.yaml
@@ -1,6 +1,7 @@
 project_name: control_v2
-load_model_name: planes_channel180_minchan_31-FNO-reproduce.pth
-comments: 8-closer detect plane
+load_model_name: planes_channel180_minchan_28-RNO-reproduce.pth
+# load_model_name: planes_channel180_minchan_31-FNO-reproduce.pth
+comments: 10-RNO
 display_variables:
   - comments
   - policy_name
@@ -15,18 +16,20 @@ use_v_plane: false
 modes: 12
 width: 32
 vis_sample_img: false
-timestep: 60
+timestep: 200
 noise_scale: 0.0
 use_spectral_conv: false
 downsample_rate: 1
 x_range: 32
 y_range: 32
+policy_name: rno
 # policy_name: fno
 # policy_name: rand
 # policy_name: unmanipulated
-policy_name: gt
+# policy_name: gt
 rand_scale: 1   # this is for rand policy
 reward_type: mse
+collect_data: true  # collect dataset
 
 # environmental settings:
 detect_plane: -10  # get velocity from detect plane
@@ -37,4 +40,4 @@ w_weight: 0.8
 vis_frame: 60
 vis_interval: 1000  # default, will be overwritten.
 output_dir: ./outputs
-close_wandb: true
+close_wandb: false
