feat: revise metrics according to Jean's suggestions.

--- a/configs/base_control.yaml
+++ b/configs/base_control.yaml
@@ -1,35 +1,37 @@
 project_name: control_v2
 load_model_name: planes_channel180_minchan_28-RNO-reproduce.pth
 # load_model_name: planes_channel180_minchan_31-FNO-reproduce.pth
-comments: 10-RNO
+exp_name: 10-RNO
 display_variables:
-  - comments
+  - exp_name
   - policy_name
   - noise_scale
-  - timestep
+  - control_timestep
 DATA_FOLDER: ./data/planes_channel180_minchan
 path_name: planes_channel180_minchan
 model_name: FNO2dObserver
 # state_path_name: ./data/channel180_minchan.mat  # original
-state_path_name: ./outputs/flow_900.npy
+state_path_name: ./outputs/flow_800.npy
 use_v_plane: false
 modes: 12
 width: 32
 vis_sample_img: false
-timestep: 200
+control_timestep: 200
+model_timestep: 1
 noise_scale: 0.0
 use_spectral_conv: false
 downsample_rate: 1
 x_range: 32
 y_range: 32
-policy_name: rno
+# policy_name: rno
 # policy_name: fno
 # policy_name: rand
 # policy_name: unmanipulated
-# policy_name: gt
+policy_name: gt
 rand_scale: 1   # this is for rand policy
 reward_type: mse
 collect_data: true  # collect dataset
+dump_state: false
 
 # environmental settings:
 detect_plane: -10  # get velocity from detect plane
@@ -40,4 +42,4 @@ w_weight: 0.8
 vis_frame: 60
 vis_interval: 1000  # default, will be overwritten.
 output_dir: ./outputs
-close_wandb: false
+close_wandb: true
