--- a/configs/matlab_rno.yaml
+++ b/configs/matlab_rno.yaml
@@ -1,8 +1,8 @@
-DATA_FOLDER: './outputs/33-fix-rate'
+DATA_FOLDER: './outputs/55-recollect-data'
 ntrain: 180
 ntest: 20
 project_name: 'control_v2'
-exp_name: '54-refine optim controller'
+exp_name: '55-recollect-data'
 path_name: planes_channel180_minchan
 model_name: RNO2dObserver
 display_variables:
@@ -13,17 +13,18 @@ display_variables:
   - model_timestep
 
 # control setups
+env_name: NSControlEnvMatlab
 # init_cond_path: ./data/channel180_minchan.mat  # original
 init_cond_path: ./outputs/flow_900.npy
 vis_sample_img: false
 noise_scale: 0.0
-detect_plane: -10  # get velocity from detect plane
+detect_plane: 10  # get velocity from detect plane
 test_plane: -25  # not used
 w_weight: 0.0
-x_range: 41
-y_range: 41
+x_range: 32
+y_range: 32
 fix_flow: true
-
+Re: 3000  # not supported yet
 # bc_type: choi
 bc_type: original
 
@@ -36,7 +37,7 @@ policy_name:
   # - fno
 rand_scale: 1
 reward_type: mse
-collect_data: true  # collect dataset
+collect_data: false  # collect dataset
 dump_state: false  # used to produce different initialization conditions
 
 # learning settings
@@ -65,9 +66,9 @@ output_dir: ./outputs
 width: 34  # 32 by default
 batch_size: 32
 layer_num: 1
-close_wandb: true
+close_wandb: false
 epochs: 200
-control_timestep: 1000
+control_timestep: 300
 
 # # large model
 # batch_size: 32  # 20
