--- a/configs/matlab_rno.yaml
+++ b/configs/matlab_rno.yaml
@@ -1,8 +1,8 @@
-DATA_FOLDER: './outputs/59-gt-curve-500'
+DATA_FOLDER: './outputs/61-revise-boundary'
 ntrain: 180
 ntest: 20
 project_name: 'control_v2'
-exp_name: '59-gt-curve-500'
+exp_name: '61-revise-boundary'
 path_name: planes_channel180_minchan
 model_name: RNO2dObserver
 display_variables:
@@ -36,9 +36,9 @@ policy_name:
   # - fno
 rand_scale: 1
 reward_type: mse
-collect_data: false  # collect dataset
+collect_data: true  # collect dataset
 collect_start: 0  # wait for some initialization steps
-collect_full_field: false # true
+# collect_full_field: true # true
 dump_state: false  # used to produce different initialization conditions
 
 # learning settings
@@ -67,7 +67,7 @@ output_dir: ./outputs
 width: 34  # 32 by default
 batch_size: 32
 layer_num: 1
-close_wandb: false
+close_wandb: true
 epochs: 200
 control_timestep: 400
 
