--- a/configs/matlab_rno.yaml
+++ b/configs/matlab_rno.yaml
@@ -2,7 +2,7 @@ DATA_FOLDER: './outputs/61-revise-boundary-with-reynolds'
 ntrain: 280
 ntest: 20
 project_name: 'control_v2'
-exp_name: '61-revise-boundary-with-reynolds'
+exp_name: '62-neural-optimal-control-reg-weight'
 path_name: planes_channel180_minchan
 display_variables:
   - exp_name
@@ -40,7 +40,8 @@ policy_name:
   # - gt
   # - rand
   # - unmanipulated
-  - rno
+  # - rno
+  - optimal-observer
   # - fno
 rand_scale: 1
 reward_type: mse
@@ -75,8 +76,8 @@ output_dir: ./outputs
 width: 34  # 32 by default
 batch_size: 32
 layer_num: 1
-close_wandb: true
-epochs: 200
+close_wandb: false
+epochs: 100
 control_timestep: 400
 
 # # large model
