--- a/configs/matlab_rno.yaml
+++ b/configs/matlab_rno.yaml
@@ -2,7 +2,7 @@ DATA_FOLDER: './outputs/61-revise-boundary-with-reynolds'
 ntrain: 280
 ntest: 20
 project_name: 'control_v2'
-exp_name: '67-large-sim-fix2'
+exp_name: '68-policy-model-zero-init'
 path_name: planes_channel180_minchan
 display_variables:
   - exp_name
@@ -38,11 +38,11 @@ bc_type: original
 
 # policy setups
 policy_name:
-  - gt
+  # - gt
   # - rand
   # - unmanipulated
   # - rno
-  # - optimal-policy-observer
+  - optimal-policy-observer
   # - optimal-observer
   # - fno
 rand_scale: 1
