--- a/configs/matlab_rno.yaml
+++ b/configs/matlab_rno.yaml
@@ -2,9 +2,9 @@ DATA_FOLDER: './outputs/61-revise-boundary-with-reynolds'
 ntrain: 280
 ntest: 20
 project_name: 'control_v2'
-exp_name: '69-full field prediction - seperate layer model'
+exp_name: '69-full field prediction - mlp head'
 path_name: planes_channel180_minchan
-run_control: true
+run_control: false
 display_variables:
   - exp_name
   - bc_type
