feat: add the code of ddpg

--- a/configs/matlab_rno.yaml
+++ b/configs/matlab_rno.yaml
@@ -1,16 +1,14 @@
-DATA_FOLDER: './outputs/0076-gen-data'
+DATA_FOLDER: './outputs/0077-add-dudt'
 ntrain: 280
 ntest: 20
 project_name: 'control_v2'
-exp_name: '0077-gt-long'
+exp_name: '0077-add-dudt'
 path_name: planes_channel180_minchan
 run_control: true
 display_variables:
   - exp_name
-  - pde_loss_weight
-  - bc_type
   - policy_name
-  - control_timestep
+  - pde_loss_weight
   - model_timestep
 
 # # control setups: opposition control
@@ -40,8 +38,8 @@ bc_type: original
 
 # policy setups
 policy_name:
-  - gt
-  # - optimal-observer
+  # - gt
+  - optimal-observer
   # - rno
   # - rand
   # - unmanipulated
@@ -49,13 +47,13 @@ policy_name:
   # - fno
 rand_scale: 1
 reward_type: mse
-collect_data: false  # collect dataset
+collect_data: true  # collect dataset
 collect_start: 0  # wait for some initialization steps
 full_field: true  # predict the full velocity field
 dump_state: false  # used to produce different initialization conditions
 
 # learning settings
-pde_loss_weight: -1  # open physics-informed learning for a pde loss > 0
+pde_loss_weight: 1.0  # open physics-informed learning for a pde loss > 0
 use_spectral_conv: false
 learning_rate: 0.001
 weight_decay: 0.0001
@@ -74,7 +72,7 @@ plane_indexs: [-10, -8, -6]
 
 # visualization settings
 vis_frame: -1  # 60 by default, set to -1 to close
-vis_interval: 1000  # default, will be overwritten.
+vis_interval: -1  # default, will be overwritten.
 show_spatial_dist_interval: 50
 output_dir: ./outputs
 
@@ -84,7 +82,8 @@ batch_size: 32
 layer_num: 1
 close_wandb: true
 epochs: 100     # 100
-control_timestep: 200000
+control_timestep: 2000
+# control_timestep: 200000
 
 # # large model
 # batch_size: 32  # 20
